--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -145,85 +145,103 @@ button.owl-next {
 /* slide-area-end */
 
 /* about-us start */
-.about-us-title {
-    width: 50%;
-}
-img.img-style {
-    width: 100%;
-}
 .about-us {
-    padding: 70px 0;
-    position: relative;
-    padding-bottom: 70px;
-    height: 660px;
-}
-.shadow-gallery {
-    position: absolute;
-    right: 0px;
-    top: 71px;
-    width: 50%;
-    height: 83%;
-}
-.shadow-gallery img{
-    position: relative;
-    width: 100%;
-    z-index: 1;
-}
-.shadow-gallery img:nth-child(1) {
-    width: 50%;
-    height: 350px;
-    border-radius: 10px;
-    background-color: #ddd;
-}
-
-.shadow-gallery img:nth-child(3) {
-    left: 4%;
-    z-index: 3;
-    max-width: 70%;
-    border-radius: 10px;
-    bottom: 100px;
-    height: 270px;
-    width: auto;
-    background-color: #ddd;
-}
-.shadow-gallery img:nth-child(2) {
-    position: absolute;
-    right: 145px;
-    top: 33px ;
-    z-index: 2;
-    width: 306px;
-    height: 370px;
-    border-radius: 10px;
-    background-color: #ddd;
-}
-.about-us-title h2 {
-    font-size: 30px;
-    font-weight: 600;
-    margin-bottom: 25px;
-}
-
-.about-us-title {
     padding: 60px 0;
 }
-
-.about-us-title p {
-    font-size: 15px;
-    line-height: 1.8;
-    color: #858585;
-    margin-bottom: -20px;
-}
-
-.single-about-service-list h3 {font-size: 20px;font-weight: 500;color: #000;}
-
-.single-about-service-list {
-    text-align: center;
-    line-height: 1.6;
-}
-
 .about-us-icon {
     display: inline-block;
     font-size: 50px;
     color: #00CAD1;
     margin-bottom: 5px;
 }
+
+.shadow-gallery img {
+    position: relative;
+    z-index: 1;
+    box-shadow: 0 10px 15px #D8D8D8;
+}
+.shadow-gallery {
+    position: relative;
+    width: 90%;
+    top: 0px;
+    display: block;
+    margin-left: 55px;
+}
+.shadow-gallery img:nth-child(1) {
+    height: 300px;
+    width: 260px;
+    border-radius: 10px;
+}
+.shadow-gallery img:nth-child(2) {
+    position: absolute;
+    right: 60px;
+    bottom: 190px;
+    z-index: 2;
+    width: 288px;
+    height: 260px;
+    border-radius: 10px;
+}
+.shadow-gallery img:nth-child(3) {
+    z-index: 3;
+    left: 5%;
+    height: 210px;
+    bottom: 75px;
+    border-radius: 10px;
+}
+.about-us-title h2 {
+    font-size: 32px;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+
+.about-us-title p {
+    color: #868686;
+    line-height: 25px;
+    font-size: 15px;
+}
+
+
+.single-about-service-list {
+    text-align: center;
+    margin-top: -295px;
+}
+.about-us-title {
+    padding: 25px 0;
+}
 /* about-us end */
+
+/* service-section start */
+/* .service-section {
+    overflow: hidden;
+    margin: 70px 0;
+}
+
+.service-img img {
+    width: 675px;
+    height: 520px;
+}
+
+.single-service-item {
+    width: 76%;
+    margin-left: 100px;
+    position: relative;
+}
+.service-icon .fa-star {
+    line-height: 100px;
+}
+.single-service-item h3 {
+    text-transform: capitalize;
+    font-size: 25px;
+    font-weight: 500;
+}
+.service-icon {
+    position: absolute;
+    font-size: 40px;
+    top: 10px;
+    /* width: 100px;
+    height: 100px; */
+    /* text-align: center;
+    color: rgb(11, 190, 187);
+    left: -105px; */
+} */
+/* service--section end */
