--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -318,3 +318,60 @@ span.progressbar-parcentage {
 }
 
 /* our-skill--section end */
+
+/* cta-area--section start */
+.cta-bg {
+    background-image: url(Images/cta-bg.jpg);
+    background-position: center;
+    background-size: cover;
+    padding-bottom: 60px;
+    position: relative;
+    z-index: 1;
+}
+.cta-bg::after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    content: "";
+    z-index: -1;
+    opacity: .8;
+}
+.cta {
+    padding: 50px 0;
+}
+
+.cta-title {
+    margin-top: 70px;
+    color: #fff;
+    font-size: 15px;
+}
+
+.cta-title h2 {
+    font-size: 32px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.cta-title p {
+    width: 68%;
+    font-size: 15px;
+}
+
+a.cta-border-btn {
+    display: inline-block;
+    background: #0CBBC0;
+    padding: 10px 30px;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 50px;
+}
+
+.cta-btn {
+    display: block;
+    margin-top: 110px;
+}
+
+/* cta-area--section end */
