--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 /* .header-area start */
 a.logo {
     padding: 0;
@@ -454,3 +458,57 @@ a.cta-border-btn {
     opacity: .8;
 }
 /* project-section--section end */
+
+/* team-section--section strat */
+.section-team {
+    padding: 50px 0;
+}
+.single-listing-box {
+    text-align: center;
+    width: 95%;
+    float: left;
+    margin: 5px;
+    background: #FBFBFB;
+    color: #000;
+    height: 400px;
+    box-shadow: 0 0 5px #ddd;
+}
+.owl-carousel .owl-item img {
+    display: inline-block !important;
+    width: 35% !important;
+}
+.radious-bg img {border-radius: 50%;margin-bottom: 15px;margin-top: 51px;}
+
+
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+    background: #14C2CD;
+}
+.single-listing-box p, span {
+    margin-top: 20px;
+    color: #777;
+}
+.slid-area .owl-stage-outer{
+    overflow: inherit;
+}
+.section-team.listing-carousel-wrapper {
+    overflow-x: hidden;
+}
+.owl-carousel{
+    position: relative;
+}
+.owl-carousel::before, .owl-carousel::after {
+    position: absolute;
+    left: -500%;
+    top: 0;
+    width: 500%;
+    height: 100%;
+    content: "";
+    background: #fff;
+    z-index: 1;
+    opacity: .7;
+}
+.owl-carousel::after{
+    left: auto;
+    right: -500%;
+}
+/* team-section--section end */
