--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -304,8 +304,8 @@ button.owl-next {
 
 span.progressbar-parcentage {
     position: absolute;
-    top: 50%;
-    left: 0;
+    top: 40%;
+    left: 10px;
     width: 100%;
     font-size: 40px;
     font-weight: 600;
@@ -472,6 +472,7 @@ a.cta-border-btn {
     color: #000;
     height: 400px;
     box-shadow: 0 0 5px #ddd;
+    border-radius: 5px;
 }
 .owl-carousel .owl-item img {
     display: inline-block !important;
@@ -493,10 +494,10 @@ a.cta-border-btn {
 .section-team.listing-carousel-wrapper {
     overflow-x: hidden;
 }
-.owl-carousel{
+.slid-area{
     position: relative;
 }
-.owl-carousel::before, .owl-carousel::after {
+.slid-area::before, .slid-area::after {
     position: absolute;
     left: -500%;
     top: 0;
@@ -512,3 +513,60 @@ a.cta-border-btn {
     right: -500%;
 }
 /* team-section--section end */
+
+/* tesimonial-section--section start */
+.single-testimonial-list {
+    text-align: center;
+    width: 100%;
+    background: #fff;
+    color: #000;
+    height: 360px;
+    border-radius: 5px;
+}
+.testimonial-bg{
+    background-image: url(Images/testimonial-bg.jpg);
+    background-size: cover;
+  
+    position: relative;
+    z-index: 1;
+    height: 600px;
+    padding: 60px 0;
+    background-position: left;
+    margin-top: 50px;
+    color: #fff;
+}
+.single-testimonial-list p.demo {
+    font-size: 13px;
+    font-weight: 600;
+    padding-top: 3px;
+}
+
+.single-testimonial-list .hero-5 {
+    font-size: 70px;
+    padding-top: 20px;
+    color: #07BDC1;
+    font-weight: 600;
+    display: inline-block;
+}
+.single-testimonial-list h5 {padding-top: 15px;}
+.testimonial-bg::after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    content: "";
+    z-index: -1;
+    opacity: .6;
+}
+.owl-theme .owl-dots .owl-dot.active span {
+    background: #14C2CD;
+}
+/* .owl-theme .owl-dots .owl-dot span{
+    background: #fff;
+}
+.owl-theme .owl-dots .owl-dot:hover span{
+    background: #fff;
+} */
+/* tesimonial-section--section end */
