--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -589,3 +589,74 @@ a.cta-border-btn {
     width: 100%;
 }
 /* brand-section--section end */
+/* footer-section-start */
+.footer-section {
+    padding: 90px 0;
+    background-color: #F5F5F5;
+}
+.site-logo a {
+    font-weight: 600;
+    font-size: 20px;
+    padding: 0;
+    color: #000;
+    text-decoration: none;
+    display: block;
+    margin-top: -5px;
+}
+.site-logo{
+    margin-bottom: 20px;
+}
+p.demo-2 {
+    margin-bottom: 0;
+    font-size: 15px;
+}
+.menu ul,.about ul {margin: 0;list-style: none;font-weight: 600;}
+
+.menu li a, .about ul a {
+    color: #000;
+}
+.menu,.about {
+    line-height: 28px;
+}
+h5.follow-title {
+    font-size: 25px;
+    margin: 0;
+    text-align: center;
+}
+
+.follow {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    padding-left: 60px;
+}
+
+.follow ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 35px;
+}
+
+.follow li {
+    display: inline-block;
+    padding-left: 3px;
+}
+
+.follow li a {
+    display: block;
+    border: 1px solid #3A3A3A;
+    padding: 10px;
+    border-radius: 50px;
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    line-height: 17px;
+    color: #000;
+}
+.follow li a:hover {
+    background: #0CBBC0;
+    border: none;
+    color: #fff;
+}
+/* footer-section-end */
