--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -98,12 +98,12 @@ h2.title {
     margin-bottom: 20px;
 }
 .middle-bg {
-    height: 100%;
+    height: 70%;
     background-size: cover;
     background-position: center center;
     margin: auto;
     display: table;
-    width: 35%;
+    width: 25%;
 }
 .play-icon {
     vertical-align: middle;
@@ -167,7 +167,7 @@ button.owl-next {
 }
 .shadow-gallery {
     position: relative;
-    width: 90%;
+    width: 101%;
     top: 0px;
     display: block;
     margin-left: 55px;
@@ -190,7 +190,7 @@ button.owl-next {
     z-index: 3;
     left: 5%;
     height: 210px;
-    bottom: 75px;
+    bottom: 95px;
     border-radius: 10px;
 }
 .about-us-title h2 {
@@ -208,7 +208,8 @@ button.owl-next {
 
 .single-about-service-list {
     text-align: center;
-    margin-top: -295px;
+    float: left;
+    width: 50%;
 }
 .about-us-title {
     padding: 25px 0;
@@ -221,55 +222,40 @@ button.owl-next {
     margin: 70px 0;
 }
 
-.service-img img {
-    width: 706px;
-    height: 585px;
-}
-
 .single-service-item {
     width: 87%;
     margin-left: 100px;
     position: relative;
-    padding: 10px;
+    padding: 2px;
+    font-size: 14px;
 }
 .service-icon .fa-star {
     line-height: 100px;
 }
 .single-service-item h3 {
     text-transform: capitalize;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 500;
 }
 .single-service-item .fa-star {
     position: absolute;
-    font-size: 40px;
-    top: 50px;
+    font-size: 35px;
+    top: 40px;
     text-align: center;
     color: rgb(11, 190, 187);
-    left: -82px;
-} 
-.service-img{
-    background-color: #ddd;
-    /* background-image: url(Images/service-bg.jpg); */
-    background-position: center;
-    background-size: cover;
+    left: -68px;
 }
+
 .service-section {
     position: relative;
     padding: 20px 0;
     padding-bottom: 0;
     margin-bottom: 0;
 }
-.service-img {
-    height: 100%;
-    position: absolute;
-    left: -151px;
-    top: 0;
-    width: 706px;
-}
+
 .single-service-item::after {
     position: absolute;
-    left: -130px;
+    left: -112px;
     top: 0;
     width: 160%;
     height: 100%;
@@ -284,6 +270,16 @@ button.owl-next {
 .single-service-item:hover .fa-star, .single-service-item:hover{
     color: #fff;
 }
+.service-img {
+    display: block;
+}
+
+.service-img img {
+    width: 697px;
+    height: 460px;
+    display: block;
+    margin-left: -130px;
+}
 /* service--section end */
 
 
@@ -292,7 +288,9 @@ button.owl-next {
 .section-title {
     margin-bottom: 50px;
 }
-
+.our-skill-title {
+    padding: 70px 0px;
+}
 .single-our-skill-circle-progressbar {
     text-align: center;
 }
@@ -304,7 +302,7 @@ button.owl-next {
 
 span.progressbar-parcentage {
     position: absolute;
-    top: 40%;
+    top: 38%;
     left: 10px;
     width: 100%;
     font-size: 40px;
@@ -316,6 +314,7 @@ span.progressbar-parcentage {
     display: inline-block;
     margin-top: 20px;
     font-weight: 600;
+    font-size: 24px;
 }
 .our-skill-section {
     padding: 70px 0;
@@ -369,7 +368,7 @@ a.cta-border-btn {
     background: #0CBBC0;
     padding: 10px 30px;
     color: #fff;
-    font-weight: 600;
+    font-weight: 700;
     border-radius: 50px;
 }
 
@@ -379,7 +378,9 @@ a.cta-border-btn {
 }
 
 /* project-section--section start */
-
+.project-title {
+    padding: 50px 0;
+}
 .single-portfolio-item {
     float: left;
     width: 48%;
