--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -196,3 +196,111 @@ a.bordered-btn-how {
     height: 360px;
 }
 /* how-it-work-section-end */
+
+
+/* case-study-sectionn-start */
+.single-case-item {
+    width: 370px;
+    height: 320px;
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    padding: 40px;
+}
+.case-bg-1{
+    background-image: url(Images/case-bg-1.jpg);
+    background-color: #ddd;
+}
+.case-bg-2{
+    background-image: url(Images/case-bg-2.jpg);
+    background-color: #ddd;
+}
+.case-bg-3{
+    background-image: url(Images/case-bg-3.jpg);
+    background-color: #ddd;
+}
+.case-bg-4{
+    background-image: url(Images/case-bg-4.jpg);
+    background-color: #ddd;
+}
+.single-case-item::after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    content: "";
+    background: #EF476F;
+    z-index: -1;
+    visibility: hidden;
+    opacity: 0;
+    transition: .3s;
+}
+
+.single-case-item:hover::after {
+    visibility: visible;
+    opacity: 1;
+}
+.case-hover {
+    opacity: 0;
+    color: #fff;
+}
+.single-case-item:hover .case-hover {
+    opacity: 1;
+}
+
+.single-case-item .fa-solid {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    display: inline-block;
+    border-radius: 50px;
+    background: #fff;
+    color: #000;
+}
+.slide-area-case .owl-stage-outer {
+    overflow: inherit;
+}
+.case-study-section {
+    overflow: hidden;
+    overflow-y: hidden;
+}
+.slide-area-case {
+    position: relative;
+    z-index: 2;
+}
+
+.slide-area-case::after {
+    position: absolute;
+    top: -1px;
+    width: 500%;
+    height: 111%;
+    background: #FBFBFB;
+    content: "";
+    right: 100%;
+}
+.case-study-section {
+    padding: 100px 0;
+    background: #FBFBFB;
+}
+
+.case-study-title h2 {
+    font-size: 28px;
+    margin-bottom: 24px;
+}
+
+.case-study-title p {
+    font-size: 15px;
+    color: #A8A8A8;
+}
+
+.case-study-title {margin-bottom: 85px;}
+.case-info h3 {
+    font-size: 24px;
+    margin-bottom: 22px;
+}
+
+.case-info .case-p-2 {font-size: 14px;margin-bottom: 30px;}
+/* case-study-section-end */
