--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -304,3 +304,40 @@ a.bordered-btn-how {
 
 .case-info .case-p-2 {font-size: 14px;margin-bottom: 30px;}
 /* case-study-section-end */
+
+
+/* testimonial-section-sectionn-start */
+.testimonial-section {
+    padding: 120px 0;
+    padding-bottom: 110px;
+}
+
+.single-testimonial-item h2 {
+    font-size: 24px;
+}
+.owl-carousel .owl-item img {
+    display: inline-block !important;
+    border-radius: 50% !important;
+    padding: 25px;
+}
+.single-testimonial-item h3 {
+    font-size: 18px;
+    padding: 6px 0;
+}
+
+.single-testimonial-item p {
+    font-size: 14px;
+    color: #999999;
+}
+.owl-theme .owl-dots .owl-dot span {
+    width: 20px;
+    height: 2px;
+    margin: 5px 7px;
+    background: #D6D6D6;
+    display: block;
+    /* border-radius: 30px; */
+}
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+    background: #EE486E;
+}
+/* testimonial-section-section-end */
