--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -344,7 +344,7 @@ a.bordered-btn-how {
 
 /* cta-area-section-start */
 .cta-area-section {
-    padding: 60px 0;
+    padding: 90px 0;
     background: #F8F8F8;
 }
 
@@ -362,3 +362,146 @@ a.cta-bordered-btn {
     text-decoration: none;
 }
 /* cta-area-section-end */
+
+/* pricing-section-start */
+.pricing-section {
+    padding: 100px 0;
+}
+
+.pricing-section-title h2 {font-size: 28px;}
+
+.pricing-section-title p {
+    font-size: 15px;
+    color: #999999;
+}
+
+.pricing-section-title {
+    margin-bottom: 100px;
+}
+.single-pricing-list {
+    text-align: center;
+}
+.single-pricing-list {
+    text-align: center;
+}
+
+.pricing-section {
+    padding: 120px 0;
+}
+
+.pricing-section-title h2 {font-size: 28px;}
+
+.pricing-section-title p {
+    font-size: 15px;
+    color: #999999;
+}
+
+.pricing-section-title {
+    margin-bottom: 100px;
+}
+
+.single-pricing-list {
+    height: 500px;
+    line-height: 30px;
+    border: 1px solid red;
+}
+
+.pricing-info {
+    padding: 35px;
+    position: relative;
+    z-index: 1;
+}
+
+.pricing-info h5 {
+    font-size: 20px;
+    padding-bottom: 35px;
+}
+
+.pricing-info span {
+    font-size: 50px;
+    color: #EE486E;
+}
+.single-pricing-list {
+    text-align: center;
+}
+
+.pricing-section {
+    padding: 120px 0;
+}
+
+.pricing-section-title h2 {font-size: 28px;}
+
+.pricing-section-title p {
+    font-size: 15px;
+    color: #999999;
+}
+
+.pricing-section-title {
+    margin-bottom: 100px;
+}
+
+.single-pricing-list {
+    height: 540px;
+    line-height: 30px;
+    border: 1px solid #F3F3F3;
+    border-radius: 5px;
+    transition: .3s;
+}
+.single-pricing-list:hover {
+    border: 1px solid #EE486E;
+}
+.pricing-info {
+    padding: 35px;
+    position: relative;
+    z-index: 1;
+}
+
+.pricing-info h5 {
+    font-size: 20px;
+    padding-bottom: 35px;
+}
+
+.pricing-info span {
+    font-size: 50px;
+    color: #EE486E;
+}
+
+.pricing-info p {
+    padding: 18px 0;
+}
+
+.pricing-info::after {
+    position: absolute;
+    left: 38px;
+    bottom: 40px;
+    width: 270px;
+    height: 1px;
+    content: "";
+    background: #F1F1F1;
+    transition: .3s;
+}
+.single-pricing-list:hover .pricing-info::after{
+    background: #EE486E;
+}
+.single-pricing-list ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    line-height: 32px;
+}
+
+a.pricing-btn {
+    display: inline-block;
+    padding: 10px 36px;
+    border-radius: 5px;
+    color: #fff;
+    background:#EE486E;
+    text-decoration: none;
+    margin-top: 28px;
+}
+.single-pricing-list li {
+    font-size: 16px;
+    color: #999999;
+    font-weight: 400;
+}
+/* pricing-section-end */
