--- a/Project-3/style.css
+++ b/Project-3/style.css
@@ -44,7 +44,7 @@ a.site-logo img {
     color: #EF466F;
 }
 
-a.bordered-btn {
+a.header-bordered-btn {
     background: #06D7A0;
     padding: 10px 34px;
     font-size: 14px;
@@ -134,3 +134,112 @@ form.form-1 {
     color: #fff;
 }
 /* .middle-area-end */
+
+/* about-us-section start */
+.about-img img {
+    width: 25%;
+    border-radius: 50%;
+    height: 135px;
+    padding: 0px;
+    box-shadow: 0px 0 20px #E9E9E9;
+    border: none;
+    margin-left: 18px;
+    margin-top: 15px;
+}
+.about-img {
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+.about-us-section {
+    padding: 120px 0;
+}
+
+.about-us-title {
+    padding: 35px 0;
+    line-height: 30px;
+}
+
+.about-us-title h3 {
+    font-size: 22px;
+    margin-bottom: 25px;
+}
+
+.about-us-title p {
+    font-size: 15px;
+    color: #B8B8B8;
+}
+
+a.about-us-btn {
+    background: #06D7A0;
+    padding: 12px 50px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    display: inline-block;
+    font-size: 14px;
+    margin-top: 15px;
+}
+/* .about-us-section-end */
+
+/* service-section start */
+img.service-icon {
+    width: 18%;
+}
+
+.single-service-list {
+    text-align: center;
+    background: #FBFBFB;
+    height: 250px;
+    display: table;
+    position: relative;
+    z-index: 1;
+}
+.service-inner {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.single-service-list::after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    content: "";
+    z-index: -2;
+    opacity: 0;
+    transition: .3s;
+    background: rgb(4,190,254);
+    background: -moz-linear-gradient(top,  rgba(4,190,254,1) 0%, rgba(21,175,251,1) 29%, rgba(57,142,244,1) 73%, rgba(65,134,240,1) 87%, rgba(68,129,235,1) 100%);
+    background: -webkit-linear-gradient(top,  rgba(4,190,254,1) 0%,rgba(21,175,251,1) 29%,rgba(57,142,244,1) 73%,rgba(65,134,240,1) 87%,rgba(68,129,235,1) 100%);
+    background: linear-gradient(to bottom,  rgba(4,190,254,1) 0%,rgba(21,175,251,1) 29%,rgba(57,142,244,1) 73%,rgba(65,134,240,1) 87%,rgba(68,129,235,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#04befe', endColorstr='#4481eb',GradientType=0 );
+
+    background-size: cover;
+    background-position: center;
+}
+.single-service-list:hover::after{
+    opacity: 1;
+}
+.single-service-list:hover img.service-icon{
+    filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(241deg) brightness(103%) contrast(103%);
+}
+.single-service-list:hover h5{
+    color: #fff;
+}
+.single-service-list h5 {margin-top: 45px;font-size: 22px;}
+.service-title h2 {
+    font-size: 28px;
+    margin-bottom: 30px;
+}
+
+.service-title p {
+    font-size: 15px;
+    color: #999999;
+    margin-bottom: 75px;
+}
+.service-section {
+    margin-bottom: 120px;
+}
+/* service-section-end */
