--- a/Project-3/style.css
+++ b/Project-3/style.css
@@ -243,3 +243,35 @@ img.service-icon {
     margin-bottom: 120px;
 }
 /* service-section-end */
+
+/*tesimonial-section start */
+.tesimonial-section {
+    background: #FBFBFB;
+    padding: 75px 0;
+}
+
+.testimonial-title .fa-solid {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    color: #21A4FC;
+    border: 1px solid #EBEBEB;
+    border-radius: 50px;
+    margin-bottom: 40px;
+}
+
+.testimonial-title p {
+    color: #373737;
+    font-size: 24px;
+    margin-bottom: 50px;
+}
+.testimonial-title h5 {
+    font-size: 18px;
+}
+
+
+p.testimonial-demo {
+    font-size: 14px;
+    color: #999999;
+}
+/*tesimonial-section-end */
