--- a/Project-3/style.css
+++ b/Project-3/style.css
@@ -262,7 +262,7 @@ img.service-icon {
 
 .testimonial-title p {
     color: #373737;
-    font-size: 24px;
+    font-size: 18px;
     margin-bottom: 50px;
 }
 .testimonial-title h5 {
@@ -275,3 +275,94 @@ p.testimonial-demo {
     color: #999999;
 }
 /*tesimonial-section-end */
+
+/*case-study-section start */
+.case-study-section {
+    padding: 120px 0;
+}
+
+.case-study-title h2 {
+    font-size: 28px;
+    margin-bottom: 30px;
+}
+
+.case-study-title p {
+    margin-bottom: 98px;
+    font-size: 15px;
+    color: #A9A9A9;
+}
+.single-case-item {
+    text-align: center;
+    width: 365px;
+    background-color: #ddd;
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+    display: table;
+    position: relative;
+    z-index: 1;
+}
+.single-case-item::after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    content: "";
+    background: rgb(13,177,232);
+    background: -moz-linear-gradient(top,  rgba(13,177,232,1) 0%, rgba(7,177,235,1) 0%, rgba(13,172,233,1) 17%, rgba(48,140,227,1) 74%, rgba(55,131,221,1) 100%, rgba(58,134,220,1) 100%);
+    background: -webkit-linear-gradient(top,  rgba(13,177,232,1) 0%,rgba(7,177,235,1) 0%,rgba(13,172,233,1) 17%,rgba(48,140,227,1) 74%,rgba(55,131,221,1) 100%,rgba(58,134,220,1) 100%);
+    background: linear-gradient(to bottom,  rgba(13,177,232,1) 0%,rgba(7,177,235,1) 0%,rgba(13,172,233,1) 17%,rgba(48,140,227,1) 74%,rgba(55,131,221,1) 100%,rgba(58,134,220,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0db1e8', endColorstr='#3a86dc',GradientType=0 );
+    opacity: 0;
+    visibility: hidden;
+    z-index: -1;
+}
+
+.single-case-item:hover::after {
+    opacity: .8;
+    visibility: visible;
+}
+.case-service-inner {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+a.case-study-btn {
+    text-decoration: none;
+    color: #373737;
+    background: #FFFFFF;
+    padding: 18px 22px;
+    border-radius: 5px;
+    visibility: hidden;
+}
+a.case-study-btn .fa-solid {
+    display: inline-block;
+    margin-left: 5px;
+}
+.single-case-item:hover a.case-study-btn {
+    visibility: visible;
+}
+.case-bg-1{
+    background-image: url(Images/project-3-case-study-bg-1.png);
+}
+.case-bg-2{
+    background-image: url(Images/project-3-case-study-bg-2.png);
+}
+.case-bg-3{
+    background-image: url(Images/project-3-case-study-bg-3.png);
+}
+.case-info {
+    text-align: center;
+    padding: 32px 0;
+}
+
+.case-info h5 {
+    font-size: 15px;
+}
+
+.case-info p {
+    font-size: 14px;
+    color: #A9A9A9;
+}
+/*case-study-section-end */
