--- a/Project-3/style.css
+++ b/Project-3/style.css
@@ -337,6 +337,7 @@ a.case-study-btn {
     padding: 18px 22px;
     border-radius: 5px;
     visibility: hidden;
+    font-size: 14px;
 }
 a.case-study-btn .fa-solid {
     display: inline-block;
@@ -485,3 +486,31 @@ a.blog-borderless-btn {
 }
 
 /*blog-section-end */
+
+/*cta-section start */
+.cta-section{
+    background: rgb(13,177,232);
+background: -moz-linear-gradient(top,  rgba(13,177,232,1) 0%, rgba(7,177,235,1) 0%, rgba(13,172,233,1) 17%, rgba(48,140,227,1) 74%, rgba(55,131,221,1) 100%, rgba(58,134,220,1) 100%);
+background: -webkit-linear-gradient(top,  rgba(13,177,232,1) 0%,rgba(7,177,235,1) 0%,rgba(13,172,233,1) 17%,rgba(48,140,227,1) 74%,rgba(55,131,221,1) 100%,rgba(58,134,220,1) 100%);
+background: linear-gradient(to bottom,  rgba(13,177,232,1) 0%,rgba(7,177,235,1) 0%,rgba(13,172,233,1) 17%,rgba(48,140,227,1) 74%,rgba(55,131,221,1) 100%,rgba(58,134,220,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0db1e8', endColorstr='#3a86dc',GradientType=0 );
+
+}
+.cta-section {
+    padding: 70px 0;
+}
+
+.cta-title h2 {
+    color: #fff;
+    font-size: 28px;
+}
+a.cta-btn {
+    display: inline-block;
+    margin-top: 40px;
+    background: #fff;
+    color: #000;
+    text-decoration: none;
+    padding: 14px 50px;
+    border-radius: 5px;
+    font-size: 14px;
+}
