--- a/Project-3/responsive.css
+++ b/Project-3/responsive.css
@@ -49,5 +49,22 @@
     a.header-bordered-btn {
        margin: auto;
     }
+    .about-img img {
+        height: 127px;
+    }
+    .single-service-list {
+        width: 100%;
+        margin-bottom: 16px;
+    }
+    .single-case-item {
+        width: 100%;
+    }
+    .single-pricing-list {
+        margin-bottom: 30px;
+    }
+    .single-blog-list {
+        width: 100%;
+        margin-bottom: 30px;
+    }
 }
     
