--- a/Project-3/responsive.css
+++ b/Project-3/responsive.css
@@ -66,5 +66,15 @@
         width: 100%;
         margin-bottom: 30px;
     }
+    a.sites-logo img {
+        margin: 50px;
+    }
+    .logo-title {
+        margin-top: 0;
+    }
+    .logo-title p {
+        margin: 50px;
+        margin-top: 0px;
+    }
 }
     
