--- a/Project-5/style.css
+++ b/Project-5/style.css
@@ -190,3 +190,71 @@ a.about-btn:hover {
     color: #06d6a0;
 }
 /* about-us-section end */
+
+/* services-section start */
+
+.single-service-list {
+    text-align: center;
+    width: 45%;
+    display: inline-block;
+    margin: 5px;
+}
+.single-service-list img {
+    height: 50px;
+    filter: brightness(0) saturate(100%) invert(63%) sepia(82%) saturate(1637%) hue-rotate(116deg) brightness(97%) contrast(95%);
+    margin-bottom: 20px;
+}
+.single-service-list h3 {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 25px;
+}
+
+.single-service-list p {
+    font-size: 15px;
+    color: #999999;
+}
+.service-info {
+    
+    padding: 80px 0;
+    border-radius: 5px;
+    position: relative;
+    margin-top: 65px
+
+}
+.service-info::after {
+    position: absolute;
+    left: -405%;
+    top: 0;
+    width: 510%;
+    height: 600px;
+    content: "";
+    background: #FDFDFD;
+    z-index: -1;
+    box-shadow: 0 0 20px #F4F4F4;
+}
+
+.service-bg {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.service-bg img {
+    width: 720px;
+    height: 600px;
+}
+
+.service-bg{
+    background-image: url(Images/project-5-service-bgs-1.png);
+    background-size: cover;
+    background-position: right;
+    width: 700px;
+    height: 600px;
+    position: absolute;
+    left: -26px;
+    top: 0;
+    border-radius: 5px;
+
+}
+/* services-section end */
