--- a/Project-5/responsive.css
+++ b/Project-5/responsive.css
@@ -34,5 +34,13 @@
         margin-bottom: 640px;
     }   
     
+    .single-testimonial-item {
+        margin-bottom: 80px;
+    }
+    .cta-bg-1 {
+        height: 100%;
+    }
 }
+
+
     
