--- a/Project-5/style.css
+++ b/Project-5/style.css
@@ -347,3 +347,200 @@ a.about-btn:hover {
     margin-left: 19px;
 }
 /* feature-section end */
+
+/* testimonial-section start */
+.testimonial-title h2 {
+    font-size: 26px;
+    margin-bottom: 20px;
+}
+
+.testimonial-title p {
+    font-size: 15px;
+    color: #999999;
+}
+
+.testimonial-title {
+    margin-bottom: 50px;
+}
+.testimonial-hover img {
+    width: 60px;
+    height: 60px;
+    clip-path: circle(50%);
+    margin-left: -30px;
+}
+.testimonial-hover {
+    position: relative;
+    padding: 65px 0;
+    opacity: 0;
+
+}
+.single-testimonial-item:hover .testimonial-hover {
+    opacity: 1;
+}
+.t {
+    position: absolute;
+    left: 45px;
+    top: 80px;
+}
+.testimonial-hover h5 {
+    font-size: 14px;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+
+.testimonial-hover .p-2 {
+    font-size: 14px;
+    color: #D2D2D2;
+    margin-left: -10px;
+}
+.single-testimonial-item p {
+    color: #D2D2D2;
+    line-height: 25px;
+}
+
+.single-testimonial-item span {
+    font-size: 36px;
+    color: #ddd;
+}
+
+.single-testimonial-item {
+    margin: 30px;
+    width: 370px;
+    height: 200px;
+    padding: 25px;
+    position: relative;
+    z-index: 1;
+}
+.single-testimonial-item:hover {
+    background: #06D6A0;
+}
+.single-testimonial-item::after {
+    position: absolute;
+    left: 13px;
+    bottom: -22px;
+    width: 40px;
+    height: 50px;
+    background: #06d6a0;
+    content: "";
+    z-index: -1;
+    transform: rotate(46deg);
+    opacity: 0;
+}
+.single-testimonial-item:hover::after{
+    opacity: 1;
+}
+.single-testimonial-item:hover span ,.single-testimonial-item:hover p {
+    color: #FEFFFD;
+}
+.single-testimonial-item:hover .p-2{
+    color: #D2D2D2;
+}
+/* testimonial-section end */
+
+/* cta-section start */
+.cta-bg-1{
+    background-image: url(Images/project-5-cta-bg-1.png);
+    background-size: cover;
+    background-position: center;
+}
+.cta-bg-1 {
+    height: 300px;
+    padding: 65px 0;
+    position: relative;
+    z-index: -1;
+    margin-top: 160px;
+}
+
+.cta-section::after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #073b4c;
+    content: "";
+    z-index: -1;
+    opacity: .5;
+}
+
+.cta-title h2 {
+    color: #FEFEFE;
+    font-size: 36px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+.cta-title p {
+    color: #FFFFFD;
+    width: 65%;
+    margin: auto;
+}
+
+a.cta-btn {
+    background: #06D7A0;
+    display: inline-block;
+    padding: 14px 40px;
+    margin-top: 22px;
+    border-radius: 5px;
+    font-size: 14px;
+    color: #fff;
+}
+/* cta-section end */
+
+/* footer-section start */
+.footer-ttile h5 {
+    font-size: 18px;
+    margin-bottom: 40px;
+    color: #fff;
+}
+
+.mainmenu ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    line-height: 30px;
+}
+
+.mainmenu li a {
+    color: #FFFFFD;
+    text-decoration: none;
+    font-size: 15px;
+    opacity: .5;
+}
+
+.footer-area {
+    padding: 80px 0;
+    background: #073B4C;
+}
+.form-2 input[type="email"] {
+    width: 180px;
+    height: 45px;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+}
+
+.form-2 input[type="button"] {height: 46px;border-top-right-radius: 3px;border: none;background: #06D7A0;margin-left: -8px;font-size: 14px;color: #fff;width: 79px;}
+
+form.form-2 ::placeholder {
+    font-size: 13px;
+    color: #999999;
+}
+/* footer-section end */
+
+/*copy-section-start */
+.copy-right-section{
+    background-color: #0F2E38;
+}
+.copy-text {
+    margin: 0;
+    padding: 18px;
+    padding-bottom: 0;
+}
+.copy-text p {
+    font-size: 15px;
+    color: #FFFDFE;
+    opacity: .5;
+}
+/*copy-section-end */
+
