--- a/Project-5/style.css
+++ b/Project-5/style.css
@@ -507,20 +507,32 @@ a.cta-btn {
     font-size: 15px;
     opacity: .5;
 }
-
+.mainmenu li a:hover {
+    color: #06D7A0;
+}
 .footer-area {
     padding: 80px 0;
     background: #073B4C;
 }
 .form-2 input[type="email"] {
-    width: 180px;
+    width: 150px;
     height: 45px;
     padding: 10px;
     border-radius: 5px;
     border: none;
+    background: #fff;
 }
 
-.form-2 input[type="button"] {height: 46px;border-top-right-radius: 3px;border: none;background: #06D7A0;margin-left: -8px;font-size: 14px;color: #fff;width: 79px;}
+.form-2 input[type="button"] {
+    height: 45px;
+    border-top-right-radius: 3px;
+    border: none;
+    background: #06D7A0;
+    margin-left: -23px;
+    font-size: 14px;
+    color: #fff;
+    width: 79px;
+}
 
 form.form-2 ::placeholder {
     font-size: 13px;
