--- a/Project-6/style.css
+++ b/Project-6/style.css
@@ -197,8 +197,9 @@ a.cta-btn {
     padding: 12px 40px;
     display: inline-block;
     font-size: 14px;
-    border-radius: 5px;
+    border-radius: 2px;
     margin-top: 25px;
+    text-decoration: none;
 }
 /* .cta-section-end */
 
