--- a/Project-7/style.css
+++ b/Project-7/style.css
@@ -257,17 +257,28 @@ h5.Social {
 .form-2 input[type="email"] {
     border: none;
     background: #F6F6F6;
-    padding: 10px 8px;
+    padding: 10px 20px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
-
-.form-2 input[type="submit"] {
-    padding: 12px 14px;
+.form-2 input[type="email"]:focus {
+    outline: none;
+}
+button {
+    padding: 11px 25px;
     border: none;
-    margin: -4px;
-    background:  #06D7A0;
+    background: #06D7A0;
+    display: inline;
+    margin-left: -3px;
     color: #fff;
     font-size: 14px;
+    padding-top: 12px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+.margin-left {
+    padding-left: 65px;
 }
 /* footer-section-section-end */
 
